<resources>
    <string name="app_name">Studentapp</string>
    <string name="user_name">Enter your user name</string>
    <string name="password">Enter your passwod</string>
    <string name="name">Enter your name</string>
    <string name="roll_no">Enter your roll number</string>
    <string name="admission_no">Enter your admission number</string>
    <string name="cpass">confirm your password</string>
</resources>