<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#00aabb"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_margin="10dp"
        android:text="@string/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_margin="10dp"
        android:text="@string/roll_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/rollno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_margin="10dp"
        android:text="@string/admission_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/admissionno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_margin="10dp"
        android:text="@string/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/uname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_margin="10dp"
        android:text="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_margin="10dp"
        android:text="@string/cpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/cpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_margin="10dp"
        android:background="#FFFFFF"
        android:textColor="#0C0C0C"
        android:text="Register"
        android:id="@+id/registerbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_margin="10dp"
        android:background="#145760"
        android:textColor="#0A0B0B"
        android:text="Go To Login"
        android:id="@+id/loginbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>